--- a/styles/main.css
+++ b/styles/main.css
@@ -26,7 +26,7 @@ a:hover {
 
 body{
     margin: 0;
-    background-color: black;
+    background-color: #211622;
     font-family: D-Din, Arial, Helvetica, sans-serif;
     color: #F9F4F1;
 }
@@ -38,7 +38,7 @@ body{
     background-image: url("../images/banner.png");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 50%;
+    background-position: 60%;
     display: flex;
     align-items: center;
 }
@@ -80,6 +80,11 @@ body{
     color:#211622;
 }
 
+.white-background {
+    background-color: white;
+    color:#211622;
+}
+
 .row {
     display: flex;
     align-items: baseline;
@@ -103,9 +108,16 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    font-weight: bolder;
+    font-family: D-Din, Arial, Helvetica, sans-serif;
     color: #211622;
     z-index: 2;
+    margin: 15px;
+}
+
+.button.purple {
+    background-color:#211622;
+    color:#F9F4F1;
+    font-size: .6em;
 }
 
 .button-text {
@@ -150,4 +162,130 @@ p {
     font-family: source-serif-pro, serif;
     font-weight: 400;
     font-style: normal;
+}
+
+.row-break {
+    flex-wrap: wrap;
+}
+
+.tab-group {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.tab-header {
+    border: 1px solid #211622;
+    padding: 10px;
+}
+
+.tab-header:hover, .tab-header.active {
+    background-color: #87FFFF;
+    cursor: pointer;
+}
+
+.tab-container {
+    width: 100%;
+}
+
+.portfolio-item {
+    background-color: #F9F4F1;
+    box-shadow: 0px 3px 7px 0px rgb(0 0 0 / 18%);
+    display: flex;
+    flex-direction: row;
+    font-family: source-serif-pro, serif;
+    font-weight: 400;
+    font-style: normal;
+    margin-bottom: 20px;
+    position: relative;
+    font-size: 1.2em;
+    flex-wrap: wrap;
+    box-sizing: border-box;
+}
+
+.portfolio-main {
+    max-width: 70%;
+    padding: 25px;
+    box-sizing: border-box;
+}
+
+.portfolio-image {
+    display:flex;
+    flex: 1;
+    min-height: 100%;
+    min-height: 300px;
+    background-image: url("../images/banner.png");
+    background-position: 70% 100%;
+    background-size: cover;
+}
+
+.portfolio-image-small {
+    display:none;
+    width: 100%;
+}
+
+.portfolio-tag {
+    padding: 5px;
+    color: #475663;
+}
+
+h2 {
+    padding: 5px 5px 15px 5px;
+    margin: 0;
+    font-family: D-Din, Arial, Helvetica, sans-serif;
+    font-weight: 300;
+}
+
+hr {
+    border-top: 1px solid #475663;
+    width: 100%;
+}
+
+.portfolio-item-content {
+    color: #475663;
+    padding: 5px;
+}
+
+.navbar {
+    position: static;
+    top: 0;
+    height: 70px;
+    width: 100%;
+    background-color: #F9F4F1;
+    color:#211622;
+    display: flex;
+    align-items: center;
+    font-size: 1.2em;
+}
+
+.nav-logo {
+    padding: 10px;
+    width: 50px;
+}
+
+.nav-item {
+    color:#211622;
+    padding: 10px;
+}
+
+.nav-item:hover {
+    cursor: pointer;
+}
+
+.nav-spacer {
+    flex: 1;
+}
+
+@media screen and (max-width: 800px) {
+    .portfolio-image-small {
+        display: block;
+    }
+
+    .portfolio-image {
+        display: none;
+    }
+
+    .portfolio-main {
+        max-width: 100%;
+    }
 }
